# EvolvingSketch

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  iwyu.imp  justfile
benchmark/: benchmark.cpp
benchmark/baselines/: AdaSketch.hpp  CountMinSketch.hpp
benchmark/benchmarks/: caching.cpp  hm.cpp
benchmark/caching/: FIFO.hpp  W-TinyLFU.hpp  policy.hpp  reader.hpp
benchmark/hm/: reader.hpp
benchmark/utils/: array.hpp  benchmark.hpp  benchmark_task.hpp  debug.hpp  errors.hpp  fifo.hpp  list.hpp  sketch.hpp
figures/: visualize.ipynb
scripts/: convert_meta.cpp  csv.ts  og.ts  pcap2csv.ts  synth.ts  tsv.ts
src/: sketch.hpp
src/adapters/: EpsilonGreedyAdapter.hpp  GradientDescentAdapter.hpp  SlidingWindowThompsonSamplingAdapter.hpp  adapter.hpp
src/utils/: hash.hpp  memory.hpp  time.hpp
src/utils/hash_functions/: murmur.cpp  murmur.hpp
test/utils/: test_hash.cpp
